--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
-      - npm ci
+     - npm ci --legacy-peer-deps
   pre_build:
     commands:
       - npm run lint
